Updated resume and added links

--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Resume<i class="material-icons right">more_vert</i></span>
-              <p><iframe src= "Pannell_Terri _Resume.htm" width="100%" height="800"> </iframe></p>
-              <p><a href="#">To download</a></p>
+              <p><iframe src= "TerriPannellResume.htm" width="100%" height="800"> </iframe></p>
+              <!--<p><a href="#">To download</a></p> -->
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
@@ -45,16 +45,16 @@
                   <div class="col s12">
                       <h5 class="white-text">Links</h5>
                       <ul>
-                          <li><a class="grey-text text-lighten-3" href="#!">Stack Overflow</a></li>
-                          <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-                          <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
+                          <li><a class="grey-text text-lighten-3" href="https://stackoverflow.com/users/7949064/terri-pannell">Stack Overflow</a></li>
+                          <li><a class="grey-text text-lighten-3" href="https://github.com/tbphokie">GitHub</a></li>
+                          <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/terri-pannell/">LinkedIn</a></li>
                       </ul>
                   </div>
               </div>
           </div>
           <div class="footer-copyright">
               <div class="container">
-              © 2017 Copyright Text
+              © 2017 Copyright
           </div>
       </footer>
     <!--Import jQuery before materialize.js-->
