--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#" class="brand-logo">Terri Pannell</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="#">Home</a></li>
-                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="about.html">Resume</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact Me</a></li>
                 </ul>
@@ -52,16 +52,16 @@
                     <div class="col s12">
                         <h5 class="white-text">Links</h5>
                         <ul>
-                            <li><a class="grey-text text-lighten-3" href="#!">Stack Overflow</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
+                            <li><a class="grey-text text-lighten-3" href="https://stackoverflow.com/users/7949064/terri-pannell">Stack Overflow</a></li>
+                            <li><a class="grey-text text-lighten-3" href="https://github.com/tbphokie">GitHub</a></li>
+                            <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/terri-pannell/">LinkedIn</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="footer-copyright">
                 <div class="container">
-                © 2017 Copyright Text
+                © 2017 Copyright
             </div>
         </footer>
 
