--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
               <p>My first game app.  A simple mystery tv-show themed hangman game.</p>
             </div>
             <div class="card-action">
-              <a href="#">Github Link</a>
+              <a href="https://tbphokie.github.io/Hangman-Game/">Github Link</a>
             </div>
           </div>
         </div>
@@ -49,7 +49,7 @@
                 <p>A Sherlock Holmes trivia game.  One mode displays all questions at once and the other mode displays one question at a time.</p>
               </div>
               <div class="card-action">
-                <a href="#">Github Link</a>
+                <a href="https://tbphokie.github.io/TriviaGame/">Github Link</a>
               </div>
             </div>
           </div>
@@ -64,7 +64,7 @@
                 <p>After adding a train, the train schedule updates displaying the details including how many minutes away the train is.</p>
               </div>
               <div class="card-action">
-                <a href="#">Github Link</a>
+                <a href="https://tbphokie.github.io/Train_Scheduler/">Github Link</a>
               </div>
             </div>
           </div>
