--- a/contact.html
+++ b/contact.html
@@ -53,16 +53,16 @@
                         <div class="col s12">
                             <h5 class="white-text">Links</h5>
                             <ul>
-                                <li><a class="grey-text text-lighten-3" href="#!">Stack Overflow</a></li>
-                                <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-                                <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
+                                <li><a class="grey-text text-lighten-3" href="https://stackoverflow.com/users/7949064/terri-pannell">Stack Overflow</a></li>
+                                <li><a class="grey-text text-lighten-3" href="https://github.com/tbphokie">GitHub</a></li>
+                                <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/terri-pannell/">LinkedIn</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="footer-copyright">
                     <div class="container">
-                    © 2017 Copyright Text
+                    © 2017 Copyright
                 </div>
             </footer>
           <!--Import jQuery before materialize.js-->
