--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
             <div class="card-image waves-effect waves-block waves-light">
               <img class="activator" src="images/office.jpg">
             </div>
-            <div class="card-content">
+            <div class="card-content" height="100%">
               <span class="card-title activator grey-text text-darken-4">Resume<i class="material-icons right">more_vert</i></span>
-              <p><iframe src= "TerriPannellResume.htm" width="100%" height="800"> </iframe></p>
-              <!--<p><a href="#">To download</a></p> -->
+              <p><iframe src= "TerriPannellResume.htm" width="100%" height="400px"> </iframe></p>
+              <p><a href="TerriPannellResume.docx">To download</a></p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
