fixed links on about/resume page

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,10 +76,10 @@
                   <div class="col s12">
                       <h5 class="white-text">Links</h5>
                       <ul>
-                          <li><a class="grey-text text-lighten-3" href="#!">Stack Overflow</a></li>
-                          <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-                          <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
-                      </ul>
+                        <li><a class="grey-text text-lighten-3" href="https://stackoverflow.com/users/7949064/terri-pannell">Stack Overflow</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://github.com/tbphokie">GitHub</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/terri-pannell/">LinkedIn</a></li>
+                  </ul>
                   </div>
               </div>
           </div>
