Converted resume to pdf

--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
             </div>
             <div class="card-content" height="100%">
               <span class="card-title activator grey-text text-darken-4">Resume<i class="material-icons right">more_vert</i></span>
-              <p><iframe src= "TerriPannellResume.htm" width="100%" height="400px"> </iframe></p>
-              <p><a href="TerriPannellResume.docx">To download</a></p>
+              <p><iframe src= "TerriPannellResume.pdf" width="100%" height="400px"> </iframe></p>
+              <p><a href="TerriPannellResume.pdf">To download</a></p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
